out/base/0-agrosolutions-namespace.yaml
#! 0-agrosolutions-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
