out/base/api-alertas-deployment.yaml
#! api-alertas-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-alertas
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-alertas
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: agrosolutions
            com.docker.compose.service: api-alertas
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: agrosolutions
                com.docker.compose.service: api-alertas
                com.docker.compose.network.agrosolutions-network: "true"
        spec:
            containers:
                - name: agrosolutions-iot-alertas-container
                  image: agrosolutions-api-alertas
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-alerta-9003
                      containerPort: 9003
