out/base/api-identidade-deployment.yaml
#! api-identidade-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-identidade
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-identidade
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: agrosolutions
            com.docker.compose.service: api-identidade
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: agrosolutions
                com.docker.compose.service: api-identidade
                com.docker.compose.network.agrosolutions-network: "true"
        spec:
            containers:
                - name: agrosolutions-iot-identidade-container
                  image: agrosolutions-api-identidade
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-identi-9000
                      containerPort: 9000
