out/base/api-propriedades-deployment.yaml
#! api-propriedades-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-propriedades
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-propriedades
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: agrosolutions
            com.docker.compose.service: api-propriedades
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: agrosolutions
                com.docker.compose.service: api-propriedades
                com.docker.compose.network.agrosolutions-network: "true"
        spec:
            containers:
                - name: agrosolutions-iot-propriedades-container
                  image: agrosolutions-api-propriedades
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-propri-9001
                      containerPort: 9001
