out/base/rabbitmq-deployment.yaml
#! rabbitmq-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rabbitmq
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: rabbitmq
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: agrosolutions
            com.docker.compose.service: rabbitmq
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: agrosolutions
                com.docker.compose.service: rabbitmq
                com.docker.compose.network.agrosolutions-network: "true"
        spec:
            containers:
                - name: agrosolutions-rabbitmq
                  image: rabbitmq:4-management
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - rabbitmq-diagnostics -q ping
                    periodSeconds: 10
                    timeoutSeconds: 5
                    failureThreshold: 5
                  ports:
                    - name: rabbitmq-4369
                      containerPort: 4369
                    - name: rabbitmq-5671
                      containerPort: 5671
                    - name: rabbitmq-5672
                      containerPort: 5672
                    - name: rabbitmq-15672
                      containerPort: 15672
                    - name: rabbitmq-15692
                      containerPort: 15692
                    - name: rabbitmq-25672
                      containerPort: 25672
                    - name: rabbitmq-15671
                      containerPort: 15671
                    - name: rabbitmq-15691
                      containerPort: 15691
