out/base/api-alertas-expose.yaml
#! api-alertas-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-alertas
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-alertas
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-alertas
    ports:
        - name: api-alerta-9003
          port: 9003
          targetPort: api-alerta-9003
