out/base/api-identidade-expose.yaml
#! api-identidade-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-identidade
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-identidade
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-identidade
    ports:
        - name: api-identi-9000
          port: 9000
          targetPort: api-identi-9000
