out/base/api-identidade-service.yaml
#! api-identidade-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-identidade-published
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-identidade
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-identidade
    ports:
        - name: api-identi-9000
          port: 9000
          protocol: TCP
          targetPort: api-identi-9000

# check if there is at least one published port
