out/base/api-ingestao-dados-expose.yaml
#! api-ingestao-dados-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-ingestao-dados
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-ingestao-dados
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-ingestao-dados
    ports:
        - name: api-ingest-9002
          port: 9002
          targetPort: api-ingest-9002
