out/base/api-propriedades-expose.yaml
#! api-propriedades-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-propriedades
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-propriedades
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-propriedades
    ports:
        - name: api-propri-9001
          port: 9001
          targetPort: api-propri-9001
