out/base/api-propriedades-service.yaml
#! api-propriedades-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: api-propriedades-published
    namespace: agrosolutions
    labels:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-propriedades
spec:
    selector:
        com.docker.compose.project: agrosolutions
        com.docker.compose.service: api-propriedades
    ports:
        - name: api-propri-9001
          port: 9001
          protocol: TCP
          targetPort: api-propri-9001

# check if there is at least one published port
